# mccore

./: .project  CMakeLists.txt  ChangeLog  INSTALL  NEWS  README  README.md  config.h.cmake  config.h.in
cmake/: FindMySQLpp.cmake  GetSVN.cmake  cmake_uninstall.cmake.in
lib/: AbstractModel.cc  AbstractModel.h  AdjacencyMatrix.h  Algo.h  Atom.cc  Atom.h  AtomFactoryMethod.cc  AtomFactoryMethod.h  AtomSet.cc  AtomSet.h  AtomType.cc  AtomType.h  AtomTypeStore.cc  AtomTypeStore.h  Binstream.cc  Binstream.h  CMakeLists.txt  Cycle.h  Exception.cc  ExtendedResidue.cc  ExtendedResidue.h  Fastastream.cc  Fastastream.h  Genbankstream.cc  Genbankstream.h  Graph.h  GraphModel.cc  GraphModel.h  HBond.cc  HBond.h  HomogeneousTransfo.cc  Makefile.in  MaximumFlowGraph.h  Messagestream.cc  Messagestream.h  Model.cc  ModelFactoryMethod.cc  Molecule.cc  Molecule.h  OrientedGraph.h  (+40 more)
lib/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
lib/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
mccore/: AbstractModel.h  Algo.h  Atom.h  Binstream.h  ChangeLog  Exception.h  ExtendedResidue.h  Graph.h  GraphAlgo.h  GraphModel.h  HomogeneousTransfo.h  INSTALL  Makefile.in  MaximumFlowGraph.h  Model.h  Molecule.h  NEWS  README  Relation.h  ResidueFactoryMethod.h  ResidueType.h  Rmsd.h  RnamlWriter.h  Sequence.h  ServerSocket.h  SqlExtrac.h  SymmetricalMatrix.h  TypeRepresentationTables.h  UndirectedGraph.h  config.h.in  configure  configure.in  mccore-config.in
mccore/docs/: Makefile.in  McCoreManual.tex
mccore/lib/: AbstractGraph.h  AbstractModel.cc  AbstractModel.h  AbstractResidue.cc  AbstractResidue.h  AdjacencyMatrix.h  Algo.cc  Algo.h  ArrayGraph.h  Atom.cc  Atom.h  AtomSet.cc  AtomSet.h  AtomType.cc  AtomType.h  AtomTypeImp.cc  AtomTypeImp.h  AtomTypeStore.cc  AtomTypeStore.h  BasicResidue.cc  BasicResidue.h  Binstream.cc  Binstream.h  CAtom.cc  CAtom.h  CException.cc  CException.h  CGraph.h  CHBond.cc  CHBond.h  CMessageQueue.cc  CMessageQueue.h  CModel.cc  CModel.h  CPoint3D.cc  CPoint3D.h  CResId.cc  CResId.h  CResIdSet.cc  CResIdSet.h  (+126 more)
mccore/test/: GraphModel.cc  GraphModel.good  HomogeneousTransfo.cc  Makefile.in  OrientedGraph.cc  OrientedGraph.good  UndirectedGraph.cc  UndirectedGraph.good
test/: GraphModel.cc  HomogeneousTransfo.cc  Makefile.in  OrientedGraph.cc  UndirectedGraph.cc  UndirectedGraph.good
